# n2s-tmmi-tracker

./: .flake8  .gitignore  ASSESSMENT_REVIEW_README.md  Dockerfile  IMPLEMENTATION_PLAN.md  PERSISTENCE_SUMMARY.md  PROGRESSION_FEATURE_README.md  README.md  VERSION_CHANGELOG.md  app.py  create_sample_data_direct.py  deploy.md  docker-compose.yml  migrate_to_supabase.py  nohup.out  pyproject.toml  requirements.txt  run_app.sh  streamlit_app.py  supabase_schema.sql  test_progression_demo.py
.github/workflows/: deploy.yml
data/: tmmi_questions.json
deploy/: README.md  deploy.sh  monitor.sh  server_setup.sh  ssl_setup.sh
prompts/: linter_cleanup_prompt.md  organization_progress_feature_prompt.md  original_prompt.md  tmmi_assessment_form_improvements_prompt.md  tmmi_new_features_prompt.md  tmmi_quick_reassessment_prompt.md
src/: __init__.py
src/components/: assessment.py  assessment_review.py  dashboard.py  database_admin.py  debug.py  edit_history.py  manual_sample.py  organizations.py  progress.py  progression_dashboard.py
src/models/: database.py  supabase_database.py
src/utils/: __init__.py  migration.py  sample_data.py  scoring.py  version.py
tests/: test_compliance.py  test_progression.py  test_scoring.py
