[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmmi-assessment-tracker"
version = "1.0.0"
description = "Professional Test Maturity Model Integration (TMMi) Assessment Platform"
authors = [{name = "TMMi Assessment Team"}]
requires-python = ">=3.8"

[tool.flake8]
max-line-length = 120
ignore = ["E402", "W293", "W291", "W503", "F401", "F811"]
exclude = [".git", "__pycache__", "venv", ".venv", "build", "dist", "*.egg-info", "logs", "data"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  venv
  | .venv
  | build
  | dist
  | logs
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "import-error",          # Our src/ imports work fine
    "wrong-import-position", # We need sys.path modification
    "trailing-whitespace",   # Auto-fixable
    "missing-docstring",     # Not enforcing docstrings everywhere
    "too-few-public-methods" # Streamlit components often have few methods
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true